--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ Debug
 Release
 ipch
 SoundComponent.vcxproj.user
+SoundComponent.opensdf
+SoundComponent.sdf
+SoundComponent.suo
 TestProgram/TestProgram/Debug
 TestProgram/TestProgram/Release
 TestProgram/TestProgram/TestProgram.vcxproj.user
