Setting the made component name to SoundComponent instead of ExtensionSample for Release.

--- a/SoundComponent.vcxproj
+++ b/SoundComponent.vcxproj
@@ -78,12 +78,12 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <OutputFile>$(OutDir)ExtensionSample.dll</OutputFile>
+      <OutputFile>$(OutDir)SoundComponent.dll</OutputFile>
       <GenerateDebugInformation>false</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
       <OptimizeReferences>true</OptimizeReferences>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
-      <ImportLibrary>$(OutDir)ExtensionSample.lib</ImportLibrary>
+      <ImportLibrary>$(OutDir)SoundComponent.lib</ImportLibrary>
       <TargetMachine>MachineX86</TargetMachine>
     </Link>
   </ItemDefinitionGroup>
